[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Characters/Ghost.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Characters/Zombie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GUI/Sprechblase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Level 4/Hintergrund_Hinten.png" type="Texture" id=4]
[ext_resource path="res://Assets/Level 4/Hintergrund_Vorne.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Level/Level4.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/zai_StopClimateChange.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/GUI/Menu.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 967, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 544.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 968.5, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 199, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 74, 27.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 136, 10 )

[sub_resource type="Animation" id=7]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 49.5, 55.5 )

[sub_resource type="DynamicFont" id=10]
size = 90
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 7 )

[node name="Level4" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Border" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2( 957, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2( -1.5, 534.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border"]
position = Vector2( 1920, 534.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2( 959, 961 )
shape = SubResource( 3 )

[node name="Platform" type="StaticBody2D" parent="."]
collision_layer = 256
collision_mask = 66

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2( 833, 1244 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Platform"]
position = Vector2( 309, 1343 )
rotation = -1.63886
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Platform"]
position = Vector2( 1407, 1479 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Platform"]
position = Vector2( 1758, 1333 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Platform"]
position = Vector2( 1937, 1196 )
shape = SubResource( 6 )

[node name="Ghost" parent="." instance=ExtResource( 1 )]
position = Vector2( 164, 644 )

[node name="Zombie" parent="." instance=ExtResource( 2 )]
position = Vector2( 337, 768 )
scale = Vector2( 3, 3 )

[node name="Foreground" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )

[node name="BlackTransitionPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="GrabArea2D" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea2D"]
position = Vector2( 1440, 829 )
shape = SubResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = 615.0
margin_top = 543.0
margin_right = 1329.0
margin_bottom = 643.0
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_fonts/font = SubResource( 10 )
text = "Thank you for playing!"

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Sprechblase" parent="." instance=ExtResource( 3 )]
margin_left = 1027.0
margin_top = -360.0
margin_right = 1067.0
margin_bottom = -320.0
rect_scale = Vector2( 0.5, 0.5 )
level = 4

[node name="Menu" parent="." instance=ExtResource( 8 )]
visible = false
level = 3

[connection signal="body_entered" from="GrabArea2D" to="." method="_on_GrabArea2D_body_entered"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]
